# hmll

./: .gitignore  CMakeLists.txt  README.adoc  hmll.pc.in
.github/workflows/: build.yml  ci.yml  cmake.yaml  python.yaml  rust-publish.yml
cmake/: fmt.cmake
examples/: fetch.c  fetchv.c  safetensors.c  universal.c
include/hmll/: cuda.h  fetcher.h  hmll.h  loader.h  memory.h  safetensors.h  types.h
include/hmll/linux/: loader.h
include/hmll/linux/backend/: iouring.h  mmap.h
include/hmll/unix/: file.h  iouring.h  loader.h
include/hmll/unix/backend/: iouring.h  mmap.h
include/hmll/win32/: file.h  loader.h
include/hmll/win32/backend/: mmap.h
lib/: context.c  errors.c  fetcher.c  loader.c  memory.c  safetensors.c  sources.c  tensors.c
lib/linux/: loader.c
lib/linux/backend/: iouring.c
lib/python/: CMakeLists.txt  context.cpp  formatters.hpp  loader.cpp  loader.hpp  ndarray.hpp  pyhmll.cpp  pyproject.toml  safetensors.cpp  specs.cpp
lib/python/pyhmll/: __init__.py  torch.py
lib/rust/hmll/: Cargo.toml  README.md
lib/rust/hmll-sys/: Cargo.toml  README.md  build.rs
lib/rust/hmll-sys/src/: lib.rs
lib/rust/hmll/examples/: basic.rs  multi_files.rs
lib/rust/hmll/src/: buffer.rs  device.rs  dtype.rs  error.rs  lib.rs  loader.rs  registry.rs  source.rs
lib/rust/hmll/tests/: safetensors.rs
lib/unix/: file.c  iouring.c  loader.c  memory.c  mmap.c
lib/unix/backend/: iouring.c  mmap.c
lib/win32/: file.c  loader.c  memory.c
lib/win32/backend/: mmap.c
scripts/: create_fetchv_testing_safetensors.py  create_testing_safetensors.py
tests/: tests_hmll_context.cpp  tests_hmll_dtype.cpp  tests_hmll_errors.cpp  tests_hmll_fetchv.cpp  tests_hmll_integration_safetensors.cpp  tests_hmll_io_uring.cpp  tests_hmll_memory.cpp  tests_hmll_safetensors.cpp
tests/include/: safetensors_internal.h
