[package]
name = "hmll-sys"
version = "0.1.0"
edition = "2021"
authors = ["Morgan Funtowicz <morgan@huggingface.co>", "Luc Georges <luc@huggingface.co>"]
description = "Low-level FFI bindings to the hmll library for high-performance ML model loading"
license = "MIT OR Apache-2.0"
repository = "https://github.com/huggingface/hmll"
homepage = "https://github.com/huggingface/hmll"
documentation = "https://docs.rs/hmll-sys"
readme = "README.md"
keywords = ["ffi", "bindings", "ml", "machine-learning", "huggingface"]
categories = ["external-ffi-bindings", "science"]
links = "hmll"
rust-version = "1.70"

[dependencies]

[build-dependencies]
bindgen = "0.72.1"
cmake = { version = "0.1", optional = true }
pkg-config = "0.3"

[features]
default = ["vendored", "io_uring"]
vendored = ["cmake"]
io_uring = []
safetensors = []
cuda = []

[profile.release]
lto = "fat"          # Full LTO for maximum optimization across crates
opt-level = 3        # Maximum optimization level
codegen-units = 1    # Single codegen unit for better optimization
strip = true         # Strip symbols for smaller binary size

[profile.bench]
inherits = "release"
lto = "fat"
opt-level = 3
codegen-units = 1
